# [#21765] Codemirror doesn't work with XHTML is served with an XML MIME type (Rouven Weßling)
# [#22664] Issue with displayed records after change of filters
# [#23599] Add a tooltip that a password needs to have at least 4 characters.


03-Dec-2010 Christophe Demko
 # [#22033] Apostrophe du mode hors ligne
 # [#23568] Media field needs to cope with com_media ACL

03-Dec-2010 Jean-Marie Simonet
 $ Modifications of the installation ini files.
 # [#22351] component messages - my settings wrong display. Thanks Andrea.
 # [#23635] "Debug Permissions Report" buttons improvement. Thanks Dennis.
 # [#23636] Invalid using of JLIB_APPLICATION_ERROR_UNHELD_ID. Thanks Dennis.
 # [#23608] Sort by user group 500 error. Thanks Mark. Temporary fix.
 # [#23492] Aria-invalid missing on some invalid inputs. Thanks Andrea.

02-Dec-2010 Mark Dexter
# Typo in language file

02-Dec-2010 Christophe Demko
 # [#23615] Implementing tooltip for the filters settings in Content Options (Jean-Marie Simonet)
 # [#23607] Profile fields not displaying in profile form. (Elin Waring)
 # [#23611] The extension manager does *not* display messages when uninstalling

02-Dec-2010 Jean-Marie Simonet
 # [#23605] Adding the string Select in the batch dropdowns
 # [#23587] com_content archive template produces invalid markup. Thanks Bill.
 # [#23613] Adding a tooltip to Select access levels in the batch layouts

01-Dec-2010 Christophe Demko
 # [#23581] Component installer does not use the key from the menu tag
 # [#23534] Method signatures don't match causing PHP strict errors - Features model populateState (Ian MacLennan)
 # [#23533] Method signatures don't match causing PHP strict errors - articles model populate state (Ian MacLennan)

01-Dec-2010 Jean-Marie Simonet
 $^ Enabling custom translation of types in installer messages
 # [#23602] Login redirect form does not redirect to the return parameter passed as GET parameter. Thanks Christophe.